{
    "name": "InputActions",
    "maps": [
        {
            "name": "Player",
            "id": "817f346e-a396-4c89-bc80-094b75382576",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "0764cd0f-7e98-4905-81f8-71dd85794b90",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Hook",
                    "type": "Button",
                    "id": "73c17d2f-5d2d-426d-baac-84f13beb9e35",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "854d59ec-9e38-4cdd-a393-c1e85917d5ff",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "4419976c-dc5e-462b-9ed0-711992438fe1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Fire1",
                    "type": "Button",
                    "id": "301750ad-ecce-415d-bda3-b39a8f99c057",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Fire2",
                    "type": "Button",
                    "id": "de67d884-cec3-4769-8cb1-64dfcb2062f9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "dd88cffb-e976-4986-81c4-8549cc6607d0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Stomp",
                    "type": "Button",
                    "id": "3a76fc97-e5b9-4970-9ac5-2dffa2c4dce8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShopLeft",
                    "type": "Button",
                    "id": "e1047509-b75a-4db4-a48b-1f13036ada29",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShopRight",
                    "type": "Button",
                    "id": "f9cc7680-abea-4a70-bbc1-07153484b43b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CameraMovement",
                    "type": "Value",
                    "id": "554d715d-f2e0-4978-9abc-dd836c641f09",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1295cdad-5c36-4ec6-b98e-4a0a81a2bae3",
                    "path": "<Keyboard>/q",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Hook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "756ae95e-11a2-4858-bad3-649c191fcf3e",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Hook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fb9c850f-a2ef-4e70-ba3e-41c0dd22401f",
                    "path": "<Keyboard>/space",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a4938fe5-f8fc-42c4-9759-96e0a3cbd06b",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "d0d6cc78-74a5-4780-ba04-3952848fd9d5",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "10a39aa6-90c8-474a-820b-ea1a203fe069",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "3ba9d329-392a-4406-b627-ebb2a8f193f0",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "861153fd-667f-4367-9c08-4a988bb8b87c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "2755aa2e-c943-4007-a822-071ce0b228fe",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrows",
                    "id": "184ed3dd-535a-4a99-a075-6b0517557694",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "3a3f3a92-c80b-4464-9877-a5a2f52dce47",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "855afc1b-9294-4693-bb89-3fb459fabb5e",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "8daeee53-24c1-444d-b5ef-817d7769ee6e",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "6fe87562-7e94-4c73-af9e-2073a344fdcb",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Gamepad",
                    "id": "c472a9d7-5d05-4160-8e13-61043c0bae56",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "da3dfec6-52be-4ba1-a555-81c62bedc740",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "d8c14d99-d3c3-410d-9560-4cf26a2d8cfe",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6b03e5d8-1f60-4067-9eef-e16efbed1294",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "fe5431d1-979c-418d-bf14-0a147ec8c3c0",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a7c73c74-7729-4ecf-8106-6c2f3ef33c98",
                    "path": "<Keyboard>/e",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b3b64e18-67fc-4fb1-ae70-66f361e37fcf",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8615d3be-0b30-42c1-94b6-1f285b661af4",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Fire1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6095c39f-e10e-4839-b08c-dd87f481a786",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Fire1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b050a9a4-1cba-4714-99f3-48e75a06fd78",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Fire2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b84f9b41-dabb-4be7-88db-94e10c766cc6",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Fire2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "45bc97e0-0cb9-4ba7-8217-93771a314502",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ccfe5936-fabd-408c-9779-0f51bded7e85",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5fa90ed3-8049-4e40-bfb5-904ab5955800",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Stomp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f33ce1de-492b-4a87-bb7c-0e8fb7421684",
                    "path": "<Keyboard>/a",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "ShopLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e1429b0d-6a91-4089-b789-c9b4378b2ebb",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "ShopLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d7a9fca2-f26a-429e-b20e-317141d9b744",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "ShopLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4241d9f2-6d32-41cc-a289-c1e7000e8e2b",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "ShopLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e2a753a9-aa67-40a4-acee-4bafd8232dbd",
                    "path": "<Keyboard>/d",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "ShopRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "74c5eeab-2c4d-462c-94d3-02d7ff8a9fda",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "ShopRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0bab976b-63da-4cab-99ea-63f0209544bc",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "ShopRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d1cbb747-7ba5-4721-bc43-3f135872ca69",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "ShopRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8baaef56-d828-4266-94e2-39de1307cdce",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "ScaleVector2(x=0.01,y=0.012)",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Gamepad",
                    "id": "c74a618f-ed09-479e-9038-4c68d345ee3e",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f66d3d1e-f188-4c23-9c9f-f7b1c2748332",
                    "path": "<Gamepad>/rightStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "bef11070-e025-4120-bb12-2c63a06fd206",
                    "path": "<Gamepad>/rightStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "2ef04a66-3253-4976-b069-f8f778135f0a",
                    "path": "<Gamepad>/rightStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "d758284b-04d9-433a-a3eb-7e0254334e70",
                    "path": "<Gamepad>/rightStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "PauseGame",
            "id": "635380ee-5434-41fd-9ee6-7266b797ba8c",
            "actions": [
                {
                    "name": "PauseButton",
                    "type": "Button",
                    "id": "17e0a7f6-2355-42e6-9ce9-5a7cbf597ff7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BackButton",
                    "type": "Button",
                    "id": "6a3f0bef-02f9-476d-b39c-bed45253ee1c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a58295cc-e134-4c83-82b5-3d29fc480c3f",
                    "path": "<Keyboard>/escape",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "PauseButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bc8af8f5-bf9e-45cb-b275-7ae8a08d0bce",
                    "path": "<Gamepad>/start",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "PauseButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "76cd5348-bffa-4f85-bedf-73ff39aca615",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "BackButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MainMenuMaps",
            "id": "8c5007ed-2e80-4634-9b51-d5c75a85881d",
            "actions": [
                {
                    "name": "PassVideo",
                    "type": "Button",
                    "id": "df161f36-cfa3-483b-aa38-cff960c50c4e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c90c9f92-8735-49e0-a93e-b58b934609a9",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PassVideo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "46d5481f-284e-4953-8847-0ff50454bf4d",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PassVideo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "163c87c1-e69a-4b23-8386-0bae8eef18f1",
                    "path": "<Gamepad>/start",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "PassVideo",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}